// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageType Component should match snapshot with null when !message 1`] = `
<div
  className="m_m"
  title="a month ago"
>
  <span
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    Empty message
  </span>
</div>
`;

exports[`MessageType Component should match snapshot with type image 1`] = `
<div
  className="m_m"
  title="a month ago"
>
  <img
    className="m_m_img"
    onClick={[Function]}
    src="/messages/instagram_message_1525091176544.jpg"
  />
</div>
`;

exports[`MessageType Component should match snapshot with type sticker 1`] = `
<div
  className="m_m"
  title="a month ago"
>
  <img
    className="m_m_sticker"
    src="/messages/instagram_message_1525091176544.jpg"
  />
</div>
`;

exports[`MessageType Component should match snapshot with type text 1`] = `
<div
  className="m_m"
  title="a month ago"
>
  <span>
    kjkjk 
  </span>
</div>
`;
